split AI keys to be tenant specific

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,38 +1,75 @@
 # Dewey Backend Environment Configuration
 # Copy this file to .env and fill in the values
 
-# Application
+# =============================================================================
+# APPLICATION
+# =============================================================================
 APP_NAME=Dewey
 DEBUG=true
 ENVIRONMENT=development
 
 # Security (generate with: openssl rand -hex 32)
+# IMPORTANT: This key is used for JWT signing AND encrypting tenant AI keys
 SECRET_KEY=your-secret-key-min-32-chars-long-here
 
-# Database
+# =============================================================================
+# DATABASE
+# =============================================================================
 DATABASE_URL=postgresql://dewey:dewey@localhost:5432/dewey
 
-# Redis
+# =============================================================================
+# REDIS
+# =============================================================================
 REDIS_URL=redis://localhost:6379/0
 
-# AI Providers (configure at least one)
+# =============================================================================
+# AI PROVIDERS (Platform Keys - for Free/Trial tier tenants only)
+# =============================================================================
+# These keys are used ONLY for tenants on the "platform" key source (Free/Trial).
+# Pro/Enterprise tenants provide their own keys, stored encrypted per-tenant.
+#
+# For development, you can set one of these to test AI features.
+# In production, consider whether to offer platform keys at all.
+
 DEFAULT_AI_PROVIDER=claude
+
+# Anthropic Claude (recommended)
 ANTHROPIC_API_KEY=
+
+# OpenAI
 OPENAI_API_KEY=
+
+# Azure OpenAI (for Azure-hosted OpenAI models)
 AZURE_OPENAI_API_KEY=
 AZURE_OPENAI_ENDPOINT=
+AZURE_OPENAI_API_VERSION=2024-02-15-preview
 
-# Ollama (for self-hosted models)
+# Ollama (self-hosted, no API key needed)
 OLLAMA_BASE_URL=http://localhost:11434
 
-# Microsoft Graph API (for O365 integration)
+# =============================================================================
+# MICROSOFT 365 / AZURE AD INTEGRATION
+# =============================================================================
+# Required for O365 email intake and Azure AD SSO
+# Register an app at https://portal.azure.com > App registrations
+
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
 AZURE_TENANT_ID=
 
-# CORS (comma-separated origins)
+# =============================================================================
+# CORS
+# =============================================================================
 CORS_ORIGINS=["http://localhost:5173","http://localhost:3000"]
 
-# Logging
+# =============================================================================
+# LOGGING
+# =============================================================================
 LOG_LEVEL=INFO
 LOG_JSON=false
+
+# =============================================================================
+# RATE LIMITING
+# =============================================================================
+RATE_LIMIT_REQUESTS=100
+RATE_LIMIT_WINDOW_SECONDS=60
