implement Azure AD OpenID auth and legacy username/password

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -52,10 +52,21 @@ OLLAMA_BASE_URL=http://localhost:11434
 # =============================================================================
 # Required for O365 email intake and Azure AD SSO
 # Register an app at https://portal.azure.com > App registrations
+#
+# App Registration Setup:
+# 1. Go to Azure Portal > Azure Active Directory > App registrations > New registration
+# 2. Name: "Dewey" (or your app name)
+# 3. Supported account types: "Accounts in any organizational directory" (multi-tenant)
+# 4. Redirect URI: Web - http://localhost:8000/api/v1/auth/azure/callback
+# 5. After creation, go to "Certificates & secrets" > New client secret
+# 6. Go to "API permissions" > Add: Microsoft Graph > Delegated > openid, profile, email, User.Read
+#
+# For production, add your production redirect URI to the app registration.
 
 AZURE_CLIENT_ID=
 AZURE_CLIENT_SECRET=
-AZURE_TENANT_ID=
+AZURE_TENANT_ID=common
+AZURE_REDIRECT_URI=http://localhost:8000/api/v1/auth/azure/callback
 
 # =============================================================================
 # CORS
