--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,9 @@
   "dependencies": {
     "@ant-design/charts": "^2.0.0",
     "@ant-design/icons": "^5.2.6",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@tanstack/react-query": "^5.17.0",
     "@tanstack/react-query-devtools": "^5.17.0",
     "antd": "^5.13.0",
