--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "dayjs": "^1.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.21.0",
     "zustand": "^4.4.0"
   },
