updates to voter file import and creation of async job processor

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,8 +27,9 @@ dependencies = [
     "alembic>=1.13.0",
     "greenlet>=3.0.0",
 
-    # Redis
+    # Redis & Task Queue
     "redis>=5.0.0",
+    "arq>=0.25.0",
 
     # Authentication & Encryption
     "python-jose[cryptography]>=3.3.0",
